# WritanSub

./: .gitignore  Audit_Report_20260312.txt  CHANGELOG.md  CLAUDE.md  Compact_GUI_Layout_Proposal.html  LICENSE  README.md  WritanSub.bat  WritanSubCLI.bat  aitrans.py  aitrans_pp.json  push_pyside6.bat  pyproject.toml  requirements.txt  方案1_GUI迁移.txt  方案2_字幕校对工作区.txt
cache/models--JusperLee--TIGER-DnR/refs/: main
cache/models--JusperLee--TIGER-DnR/snapshots/b7a59560bbca10febbcd46fb01600f868e587f57/: config.json
cache/models--JusperLee--TIGER-speech/refs/: main
cache/models--JusperLee--TIGER-speech/snapshots/f0340340b2d9bbf72074edf8c076dcab59a10ba2/: config.json  model.safetensors
native/: Cargo.toml  pyproject.toml
native/src/: lib.rs
writansub/: __init__.py  __main__.py  bridge.py  cli.py  config.py  logger.py  network.py  paths.py  pipeline.py  registry.py  setup_models.py  types.py
writansub/align/: core.py
writansub/core/: alignment.py  review.py  srt_io.py  tiger.py  translate.py  types.py  whisper.py
writansub/gui/: alignment_tab.py  app.py  driver_check.py  pipeline_tab.py  tiger_tab.py  translate_tab.py  whisper_tab.py  widgets.py
writansub/gui/tabs/: align.py  pipeline.py  preprocess.py  transcribe.py  translate.py  tts.py
writansub/pipeline/: __init__.py  runner.py
writansub/preprocess/: core.py
writansub/subtitle/: extract.py  ref_align.py  review.py  srt_io.py
writansub/transcribe/: core.py
writansub/translate/: core.py
writansub/tts/: core.py
