[project]
name = "writansub"
version = "0.1.6.3"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchaudio",
    "faster-whisper",
    "numpy",
    "pysrt",
    "openai",
    "cutlet",
    "unidic-lite",
    "pypinyin",
    "unidecode",
    "korean-romanizer",
    "PySide6>=6.5.0",
    "imageio-ffmpeg",
    "qwen-asr",
    "demucs",
    "espnet",
    "espnet-model-zoo",
    "maturin>=1.4.0",
    "writansub_native",
]

[project.scripts]
writansub = "writansub.gui.app:main"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
writansub_native = { path = "./native" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
