[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writansub"
version = "0.1.6.3"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "faster-whisper",
    "numpy",
    "pysrt",
    "openai",
    "cutlet",
    "unidic-lite",
    "pypinyin",
    "unidecode",
    "korean-romanizer",
    "PySide6>=6.5.0",
    "imageio-ffmpeg",
    "qwen-asr",
    "demucs",
    "espnet",
    "espnet-model-zoo",
    "writansub_native",
]

[tool.hatch.build.targets.wheel]
packages = ["writansub"]

[project.scripts]
writansub = "writansub.gui.app:main"
writansub-cli = "writansub.cli:main"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
writansub_native = { path = "./native" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
